# VocaDB_Rule_Modules

./: .gitignore  README.md  pyproject.toml  ty.toml
rule_modules/: __init__.py  mod_types.py  rules.py  tests.py
rule_modules/modules/: 0_template.py  130_cover-unifiers.py  138_source-lyrics.py  148_tag-category-required.py  14_song-source-required.py  150_tag-description-required.py  16_no-mobile-links.py  17_no-download-links.py  24_original-language-required.py  25_matching-original-language-title-fields.py  52_album-source-required.py  55_cover-art-required.py  60_romaji-required.py  61_translation-required.py  71_artist-source-required.py  78_no-producer-name-duplication.py  7_name-required.py  85_character-designer-and-illustrator.py  8_no-name-duplication.py  92_voicebank-release-date-required.py  94_respect-the-do-not-reprint-tag.py  97_event-category-required.py
